test/domains/bradc/modDomMethod.good
modDomMethod.chpl:9: error: illegal lvalue in assignment
